split admin and product styling

--- a/templates/admin-products.html
+++ b/templates/admin-products.html
@@ -3,6 +3,7 @@
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="/static/admin.css">
+    <link rel="stylesheet" href="/static/product.css">
 {% endblock %}
 {% block content %}
     <h1>Admin Products</h1>
