--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
 <head>
   {% block head %}
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/main.css">
   <title>{% block title %}{% endblock %} - Woody's Lumber Yard</title>
   {% endblock %}
@@ -33,6 +32,7 @@
   </main>
 
   <footer>
+    <button type="button" name="admin" id="admin-button">Admin</button>
     <p>&copy; Copyright 2020 by <a href="/">Woody's Lumber Yard</a>.</p>
   </footer>
 
