--- a/static/css/_colors.sass
+++ b/static/css/_colors.sass
@@ -1,6 +1,6 @@
 $primary-color: #B09C7D
 $dark-color: #634C29
-$light-color: #B08648
+$light-color: #FCDFB3
 $accent-dark-color: #4A381E
-$accent-light-color: #FCDFB3
+$accent-light-color: #B08648
 $white: #FFFFFF
