--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -1,15 +1,21 @@
 @import './colors.sass'
 @import './fonts.sass'
+@import './mixins.sass'
+@import './extends.sass'
+
+*
+  box-sizing: border-box
 
 body
-  background-color: $dark-color
+  background-color: $light-color
   margin: 0
   text-align: center
   font-family: $font
 
   header
-    background-color: $dark-color
+    background-color: $light-color
     padding: 36px
+    padding-bottom: 0
 
     h1
       font-family: $heading-font
@@ -17,7 +23,7 @@ body
       text-align: center
 
     h1 a
-      color: $accent-light-color
+      color: $dark-color
       text-decoration: none
 
     nav
@@ -26,7 +32,7 @@ body
 
       ul
         align-items: center
-        border-top: 1px solid $accent-light-color
+        border-top: 1px solid $dark-color
         display: flex
         flex-direction: row
         height: 3rem
@@ -36,16 +42,16 @@ body
           display: flex
 
           a
-            color: $accent-light-color
+            color: $dark-color
             text-decoration: none
 
 
             &:hover
-              color: $light-color
+              color: $primary-color
 
 
   main
-    background-color: $accent-light-color
+    background-color: $primary-color
     padding: 20px
 
     h1
@@ -59,68 +65,121 @@ body
       flex-direction: row
       flex-wrap: wrap
       height: 100%
-      justify-content: space-around
+      justify-content: flex-start
       width: 100%
 
       .product-item
-        align-items: center
+        +flexbox(column)
         background-color: $light-color
-        color: $white
-        display: flex
-        flex-direction: column
-        justify-content: center
+        color: $dark-color
         padding: 0 1rem
         width: 240px
 
         p
           font-size: 1.5rem
 
-          img
-            width: 100%
+          a
+            color: $dark-color
+            text-decoration: none
 
-    .admin-nav
-      width: 500px
-      height: 400px
+            img
+              width: 100%
+
+    .product-detail
+      +flexbox(row)
+      justify-content: space-between
+
+      .product-detail-image
+        width: 60%
+        background-color: $light-color
+        padding: 10px
+
+        img
+          width: 100%
+
+      .product-detail-text
+        +flexbox(column)
+        align-items: flex-start
+        align-self: flex-start
+        padding: 10px
+        background-color: $light-color
+        width: 35%
+
+    form
+      background-color: $light-color
+      margin: auto
       display: flex
       flex-direction: column
       justify-content: space-around
       align-items: center
-      margin: auto
-      background-color: $dark-color
+      width: 500px
+      height: 500px
+      line-height: 2
+      text-align: center
 
-      button
-        padding: 1rem 2rem
+      input, label
         width: 80%
-        display: inline-block
-        border: none
-        margin: 0
-        text-decoration: none
-        background: $light-color
-        color: $white
-        font-size: 1rem
-        cursor: pointer
-        text-align: center
-        transition: background 150ms ease-in-out, transform 50ms ease
-        -webkit-appearance: none
-        -moz-appearance: none
+        color: $dark-color
 
-        &:hover, &:focus
-          background-color: $primary-color
+      input
+        width: 80%
 
-        &:focus
-          outline: 1px solid $white
+        &[type=text]
+          background-color: transparent
+          border: none
+          border-bottom: 3px solid $dark-color
+          outline: $dark-color
 
-        &:active
-          transform: scale(0.95)
+        &[type=submit]
+          padding: 1rem 2rem
+          width: 80%
+          display: inline-block
+          border: none
+          margin: 0
+          text-decoration: none
+          background: $dark-color
+          color: $light-color
+          font-family: sans-serif
+          font-size: 1rem
+          cursor: pointer
+          text-align: center
+          transition: background 150ms ease-in-out, transform 50ms ease
+          -webkit-appearance: none
+          -moz-appearance: none
 
+          &:hover, &:focus
+            background: $primary-color
+
+          &:focus
+            outline: 1px solid $primary-color
+            outline-offset: -4px
+
+          &:active
+            transform: scale(0.95)
+
+        &[type="file"]
+          z-index: -1
+          display: none
 
   footer
-    background-color: $dark-color
+    background-color: $light-color
     padding: 20px
 
+    button
+      @extend %btn
+
+      &:hover, &:focus
+        background-color: $primary-color
+
+      &:focus
+        outline: 1px solid $white
+
+      &:active
+        transform: scale(0.95)
+
     p
-      color: $accent-light-color
+      color: $dark-color
 
       a
-        color: $accent-light-color
+        color: $dark-color
         text-decoration: none
