changed route for dimensional-lumber

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,14 @@
         <li><a href="/boards">Boards</a></li>
         <li><a href="/plywood">Plywood</a></li>
         <li><a href="/pressure-treated">Pressure Treated</a></li>
-        <li><a href="/dimensional_lumber">Dimensional Lumber</a></li>
+        <li><a href="/dimensional-lumber">Dimensional Lumber</a></li>
         <li><a href="/decking">Decking</a></li>
         <li><a href="/fencing">Fencing</a></li>
         <li><a href="/paneling">Paneling</a></li>
         <li><a href="/lattice">Lattice</a></li>
       </ul>
     </nav>
+    {% block nav %}{% endblock %}
   </header>
 
   <main>
