--- a/templates/admin-add-products.html
+++ b/templates/admin-add-products.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
-{% block title %}Admin - Add Products{% endblock %}
-{% block head %}
-    {{ super() }}
-{% endblock %}
+{% extends "base-admin.html" %}
+{% block title %}Admin{% endblock %}
+
 {% block content %}
     <h1>Add Product</h1>
     <form action="/admin/products" method="POST" enctype="multipart/form-data">
