--- a/templates/admin-delete-products.html
+++ b/templates/admin-delete-products.html
@@ -1,15 +1,11 @@
-{% extends "base.html" %}
-{% block title %}Admin - Delete Products{% endblock %}
-{% block head %}
-    {{ super() }}
-    <script src="/static/admin.js" charset="utf-8" defer></script>
-{% endblock %}
+{% extends "base-admin.html" %}
+{% block title %}Admin{% endblock %}
+
 {% block content %}
     <h1>Admin - Delete Products</h1>
     <form  action="/admin/products" method="POST">
       <label for="title">Enter product title:</label>
       <input type="text" name="title" id="title">
       <input type="submit" name="button" value="Delete Product">
-      <button type="button" name="button" value="Delete All Products" id="delete-all">Delete All Products</button>
     </form>
 {% endblock %}
