--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -196,8 +196,8 @@ body
             transform: scale(0.95)
 
         &[type="file"]
-          z-index: -1
-          display: none
+          z-index: 0
+          // display: none
 
   footer
     background-color: $light-color
