--- a/templates/admin-add-products.html
+++ b/templates/admin-add-products.html
@@ -5,11 +5,11 @@
     <h1>Add Product</h1>
     <form action="/admin/products" method="POST" enctype="multipart/form-data">
       <label for="title">Title</label>
-      <input type="text" name="title" id="title">
+      <input type="text" name="title" id="title" required>
       <label for="price">Price</label>
-      $<input type="text" name="price" id="price">
+      $<input type="text" name="price" id="price" required>
       <label for="img" class="button">Upload Image</label>
-      <input type="file" name="img" id="img" accept="image/*">
+      <input type="file" name="img" id="img" accept="image/*" required>
       <input type="submit" name="button" value="Add Product">
     </form>
 {% endblock %}
