--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
   <header>
     <div class="top-row">
-      <form method="GET">
+      <form method="POST">
         <input type="text" name="title" value="" placeholder="What can we help you find today?">
         <input type="image" src="/static/assets/search.svg" alt="Submit Form" />
       </form>
