--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,9 +103,9 @@ body {
     background-color: #B09C7D;
     padding: 20px; }
     body main h1 {
-      font-family: "Ledgewood", sans-serif;
-      margin: 0;
-      text-align: center; }
+      color: #FCDFB3;
+      font-size: 2rem;
+      margin-top: 0; }
     body main .product-grid {
       align-items: center;
       display: flex;
