--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -93,9 +93,9 @@ body
     padding: 20px
 
     h1
-      font-family: $heading-font
-      margin: 0
-      text-align: center
+      color: $light-color
+      font-size: 2rem
+      margin-top: 0
 
     .product-grid
       align-items: center
