--- a/templates/admin-add-products.html
+++ b/templates/admin-add-products.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Add Product</h1>
-    <form action="/admin/products" method="POST" enctype="multipart/form-data">
+    <form action="/admin" method="POST" enctype="multipart/form-data">
       <label for="title">Title</label>
       <input type="text" name="title" id="title" required>
       <label for="price">Price</label>
