--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,7 @@
   src: url("../fonts/Open-Sans-Light.eot?#iefix") format("embedded-opentype");
   src: url("../fonts/OpenSans-Light.ttf") format("truetype");
   src: url("../fonts/OpenSans-Light.woff") format("woff"); }
-body footer button {
+body main .product-grid .product-item button, body footer button {
   -ms-appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -49,7 +49,10 @@ body {
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        align-items: flex-end; }
+        justify-content: flex-start;
+        align-items: flex-end;
+        flex-basis: 33%;
+        margin: 0 10px; }
         body header .top-row form input[type=text] {
           -ms-appearance: none;
           -moz-appearance: none;
@@ -61,7 +64,7 @@ body {
           color: #634C29;
           font-size: 20px;
           outline: none;
-          widtH: 300px; }
+          widtH: 333px; }
           body header .top-row form input[type=text]::placeholder {
             color: #B09C7D; }
         body header .top-row form input[type=image] {
@@ -76,14 +79,24 @@ body {
           body header .top-row .user-icons a img {
             height: 36px; }
     body header h1 {
+      flex-basis: 33%;
       font-family: "Ledgewood", sans-serif;
       margin: 0;
-      text-align: center; }
+      text-align: center;
+      justify-self: center; }
     body header h1 a {
       color: #634C29;
       text-decoration: none; }
+    body header .user-icons {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      justify-content: flex-end;
+      flex-basis: 33%; }
+      body header .user-icons img {
+        margin: 0 10px; }
     body header nav {
-      background-size: cover;
       margin: 0; }
       body header nav ul {
         align-items: center;
@@ -122,14 +135,27 @@ body {
         background-color: #FCDFB3;
         color: #634C29;
         padding: 0 1rem;
+        margin: 0 1rem;
         width: 240px; }
-        body main .product-grid .product-item p {
-          font-size: 1.5rem; }
-          body main .product-grid .product-item p a {
-            color: #634C29;
-            text-decoration: none; }
-            body main .product-grid .product-item p a img {
-              width: 100%; }
+        body main .product-grid .product-item a {
+          color: #634C29;
+          text-decoration: none; }
+          body main .product-grid .product-item a img {
+            width: 100%; }
+        body main .product-grid .product-item .title a {
+          font-size: 1rem; }
+        body main .product-grid .product-item .price {
+          font-size: 1.2rem;
+          font-weight: 900; }
+        body main .product-grid .product-item button {
+          margin-bottom: 1rem;
+          width: 100%; }
+          body main .product-grid .product-item button:hover, body main .product-grid .product-item button:focus {
+            background-color: #B09C7D; }
+          body main .product-grid .product-item button:focus {
+            outline: 1px solid #FFFFFF; }
+          body main .product-grid .product-item button:active {
+            transform: scale(0.95); }
     body main .product-detail {
       display: flex;
       flex-direction: row;
@@ -157,17 +183,19 @@ body {
       margin: auto;
       display: flex;
       flex-direction: column;
+      font-size: 1.5rem;
       justify-content: space-around;
       align-items: center;
       width: 500px;
       height: 500px;
       line-height: 2;
-      text-align: center; }
+      text-align: left; }
       body main form input, body main form label {
         width: 80%;
         color: #634C29; }
       body main form input {
-        width: 80%; }
+        width: 70%;
+        margin-left: 1rem; }
         body main form input[type=text] {
           background-color: transparent;
           border: none;
