--- a/templates/admin-add-products.html
+++ b/templates/admin-add-products.html
@@ -4,10 +4,14 @@
 {% block content %}
     <h1>Add Product</h1>
     <form action="/admin" method="POST" enctype="multipart/form-data">
-      <label for="title">Title</label>
-      <input type="text" name="title" id="title" required>
-      <label for="price">Price</label>
-      $<input type="text" name="price" id="price" required>
+      <label>
+        Title
+      <input type="text" name="title" required>
+      </label>
+      <label>
+        Price
+        $<input type="text" name="price" required>
+      </label>
       <label for="img" class="button">Upload Image</label>
       <input type="file" name="img" id="img" accept="image/*" required>
       <input type="submit" name="button" value="Add Product">
