--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,10 @@
       </form>
       <h1><a href="/">Woody's Lumber Yard</a></h1>
       <div class="user-icons">
-        <a href="#">
+        <a href="/profile">
           <img src="/static/assets/user.svg" alt="My Account">
         </a>
-        <a href="#">
+        <a href="/cart">
           <img src="/static/assets/shopping-cart.svg" alt="Shopping Cart">
         </a>
       </div>
