--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
       </form>
       <h1><a href="/">Woody's Lumber Yard</a></h1>
       <div class="user-icons">
-        <a href="/profile">
+        <a href="/account">
           <img src="/static/assets/user.svg" alt="My Account">
         </a>
         <a href="/cart">
