updated account template

--- a/templates/account.html
+++ b/templates/account.html
@@ -3,4 +3,8 @@
 
 {% block content %}
 <h1>Account</h1>
+<p>Name: Name</p>
+<p>Email: Email</p>
+<p>Billing Address: </p>
+<p>Shipping Address: </p>
 {% endblock %}
