--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -197,7 +197,7 @@ body
         width: 70%
         margin-left: 1rem
 
-        &[type=text]
+        &[type=text], &[type=email], &[type=password]
           background-color: transparent
           border: none
           border-bottom: 3px solid $dark-color
