--- a/templates/account.html
+++ b/templates/account.html
@@ -2,9 +2,23 @@
 {% block title %}Cart{% endblock %}
 
 {% block content %}
-<h1>Account</h1>
-<p>Name: Name</p>
-<p>Email: Email</p>
-<p>Billing Address: </p>
-<p>Shipping Address: </p>
+{% if message %}
+  {{ message }}
+{% endif %}
+<h1>Sign Up</h1>
+<form method="POST">
+  <label>
+    Username
+    <input type="text" name="username" required>
+  </label>
+  <label>
+    Email
+    <input type="email" name="email" required>
+  </label>
+  <label>
+    Password
+    <input type="password" name="password" required>
+  </label>
+  <input type="submit" name="submit" value="Create Account">
+</form>
 {% endblock %}
