--- a/static/css/_mixins.sass
+++ b/static/css/_mixins.sass
@@ -9,3 +9,11 @@
   -moz-appearance: $property
   -webkit-appearance: $property
   appearance: $property
+
+=noselect
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  user-select: none
