--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -176,6 +176,29 @@ body
         background-color: $light-color
         width: 35%
 
+    .signup
+      display: none
+
+      small
+        +noselect
+        color: $accent-dark-color
+
+        a
+          color: $light-color
+          cursor: pointer
+          text-decoration: underline
+
+    .login
+
+      small
+        +noselect
+        color: $accent-dark-color
+
+        a
+          color: $light-color
+          cursor: pointer
+          text-decoration: underline
+
     form
       background-color: $light-color
       margin: auto
@@ -194,8 +217,8 @@ body
         color: $dark-color
 
       input
-        width: 70%
-        margin-left: 1rem
+        width: 100%
+        font-size: 1.5rem
 
         &[type=text], &[type=email], &[type=password]
           background-color: transparent
@@ -214,7 +237,6 @@ body
           background: $dark-color
           color: $light-color
           font-family: sans-serif
-          font-size: 1rem
           cursor: pointer
           text-align: center
           transition: background 150ms ease-in-out, transform 50ms ease
