--- a/static/css/_extends.sass
+++ b/static/css/_extends.sass
@@ -15,3 +15,9 @@
   cursor: pointer
   text-align: center
   transition: background 150ms ease-in-out, transform 50ms ease
+
+%animated
+  -webkit-animation-duration: 0.5s
+  animation-duration: 0.5s
+  -webkit-animation-fill-mode: both
+  animation-fill-mode: both
